--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,6 @@
   ],
   "dependencies": {
     "d3": "~3.5.6",
-    "socket.io-client": "~1.3.7",
-    "jquery": "~2.1.4"
+    "socket.io-client": "~1.3.7"
   }
 }
