--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jade": "^1.11.0",
     "less-middleware": "^2.0.1",
     "morgan": "^1.6.1",
+    "node-celery": "^0.2.3",
     "pg": "^4.4.2",
     "socket.io": "^1.3.7"
   }
