--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install",
     "start": "node index.js --compilers js:babel/register",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
