--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "babel": "^5.8.23",
+    "bower": "^1.5.3",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "jade": "^1.11.0",
